--- a/GhostGameMechanics1Repo.csproj
+++ b/GhostGameMechanics1Repo.csproj
@@ -98,10 +98,14 @@
     <Compile Include="Assets\CameraBehaviour\CameraPlaneController.cs" />
     <Compile Include="Assets\CameraBehaviour\CameraStaticController.cs" />
     <Compile Include="Assets\CameraBehaviour\CapsulaCollisionBehaviour.cs" />
+    <Compile Include="Assets\CameraBehaviour\EnemyBehaviour.cs" />
+    <Compile Include="Assets\CameraBehaviour\EnemyGenerator.cs" />
     <Compile Include="Assets\CameraBehaviour\SphereShooter.cs" />
     <Compile Include="Assets\DeviceLocationServices\AccelerometerControl.cs" />
+    <Compile Include="Assets\DeviceLocationServices\CharacterMovementControl.cs" />
     <Compile Include="Assets\DeviceLocationServices\GPSControl.cs" />
     <Compile Include="Assets\DeviceLocationServices\GyroControl.cs" />
+    <Compile Include="Assets\DeviceLocationServices\SphereShooterWithDeviceLocation.cs" />
     <Compile Include="Assets\DeviceLocationServices\UpdateText.cs" />
     <Compile Include="Assets\MainMenu\ClickHandler.cs" />
     <Compile Include="Assets\ModelInteraction\BackHandler.cs" />
